--- a/templates/figure/figure.html.twig
+++ b/templates/figure/figure.html.twig
@@ -59,6 +59,14 @@
 			</div>
 
 		</article>
+
+		<video controls>
+			<source src="" >
+			<p>Votre navigateur ne prend pas en charge les vidéos HTML5.
+				Voici <a href="myVideo.mp4">un lien pour télécharger la vidéo</a>.</p>
+		</video>
+
+<video src="https://www.youtube.com/watch?v=YakDrsnqpBs" width="375" height="280" controls></video>
 						
 		<!-- Poster un commentaire -->
 		{% if app.user %}
