--- a/templates/figure/figure.html.twig
+++ b/templates/figure/figure.html.twig
@@ -16,10 +16,10 @@
 					<img src="../images/figures/illustrations/{{figure.illustrations|first.path}}" alt="{{figure.illustrations|first.path}}" class="rounded-top" style="height:500px;"/>
 				{% endif %}
 				<div class="position-absolute z-index-2" style="top:0;right:10px;">
-					<a href="{{ path('update_figure',{'id':figure.id}) }}">
+					<a href="{{ path('update_figure',{'slug':figure.slug}) }}">
 						<i class="fas fa-pencil-alt m-2"></i>
 					</a>
-					<a href="{{ path('update_figure',{'id':figure.id}) }}">
+					<a href="{{ path('update_figure',{'slug':figure.slug}) }}">
 						<i class="fas fa-trash-alt m-2"></i>
 					</a>
 					
