--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,7 +39,7 @@
 		</style>
 	</head>
 	<body>
-
+ 		
 		<header>
 			<nav class="navbar navbar-expand navbar-dark bg-dark">
 				<a class="navbar-brand" href="{{ path('home') }}"><img style="height:30px; width:30px;"src='/images/logo.png'/> Snowtricks</a>
@@ -65,6 +65,12 @@
 			</nav>
 			
 		</header>
+		
+		{% for message in app.flashes('success') %}
+		<div class="alert alert-success my-2 mx-auto w-100 text-center" style="max-width:500px;" >
+			{{ message }}
+		</div
+        {% endfor %}
 
 		<section>
 			{% block body %}{% endblock %}
