--- a/templates/figure/figure.html.twig
+++ b/templates/figure/figure.html.twig
@@ -4,6 +4,12 @@
 	{{figure.name}}
 {% endblock %}
 
+{% block stylesheets %}
+<style>
+.pagination span{margin:5px;}
+</style>
+{% endblock %}
+
 {% block body %}
 	<section class="container  mt-5">
 		<article class="row border" style="border-radius:5px;">
@@ -37,7 +43,7 @@
 
 			<!-- Informations secondaire de l'article -->
 			<div class="col-sm-12 card-body text-center" style="">
-				<p class="card-text blockquote-footer">Par : {{figure.user.username|capitalize}} | Ajouté le <em>{{figure.date|date("d/m/Y à H:i")}}</em> | Groupe : {{figure.figureGroupe}} | commentaire{% if comments|length > 1 %}s{% endif %} : <a href="#commentaires">({{comments|length}})</a></p>
+				<p class="card-text blockquote-footer">Par : {{figure.user.username|capitalize}} | Ajouté le <em>{{figure.date|date("d/m/Y à H:i")}}</em> | Groupe : {{figure.figureGroupe}} | commentaire{% if commentsData|length > 1 %}s{% endif %} : <a href="#commentaires">({{commentsData|length}})</a></p>
 			</div>
 
 			<hr class="col-sm-10">
@@ -80,7 +86,7 @@
 		<div  id="commentaires" class="row justify-content-center border my-4 " style="border-radius:5px;">
 			<div class="col-sm-12 m-4">
 			{% if comments %}
-			 	<p class="mb-5" style="text-decoration:#555 underline;">{{comments|length}} COMMENTAIRE{% if comments|length > 1 %}S{% endif %}</p>
+			 	<p class="mb-5" style="text-decoration:#555 underline;">{{commentsData|length}} COMMENTAIRE{% if commentsData|length > 1 %}S{% endif %}</p>
 				{% for comment in comments %}
 				<div class="d-flex m-2">
 					<img src="../images/pictures/{{comment.user.picture}}" class="mx-4 mt-2 circle" style="height:50px; width:50px; border-radius:50px;"/>
@@ -91,6 +97,9 @@
 				</div>
 				<hr>
 				{% endfor %}
+				<div class="d-flex justify-content-center">
+					{{ knp_pagination_render(comments) }}
+				</div>
 				{% else %}
 				<div class="text-center card-text">
 					<p><strong>Aucun utilisateur n'a posté de commentaire sur cette figure pour le moment.</strong></p>
