use modal boostrap to make the confirm message - yes button dont delete figure yet

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,8 +7,6 @@
 			{% endblock %}
 		</title>
 		<link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="https://kit.fontawesome.com/43219f80e6.js" crossorigin="anonymous"></script>
 		{% block stylesheets %}{% endblock %}
 		<style>
 			body{
@@ -76,7 +74,13 @@
 			</div>
 		</footer>
 
-		{% block javascripts %}{% endblock %}
+		{% block javascripts %}
+			<script src="https://kit.fontawesome.com/43219f80e6.js" crossorigin="anonymous"></script>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>			
+		{% endblock %}
 
 	</body>
 </html>
