--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -40,7 +40,7 @@
 								<a href="{{ path('update_figure',{'slug':figure.slug}) }}">
 									<i class="fas fa-pencil-alt mx-2"></i>
 								</a>
-								<a href="" data-toggle="modal" data-target="#deleteFigure">
+								<a href="" data-toggle="modal" data-target="#deleteFigure-{{figure.id}}">
                                     <i class="fas fa-trash-alt mx-2"></i>
                                 </a>
 								{% include 'modal/delete_figure.html.twig' %}
