--- a/templates/security/sign_in.html.twig
+++ b/templates/security/sign_in.html.twig
@@ -6,7 +6,7 @@
 
 <div class="container h-50">
     <div class="row h-100 justify-content-center align-items-center">
-        <form action="{{ path('sign_in')}}" method="post" class="col-sm-8 col-md-6  control-label center-block mx-auto  justify-content-center align-items-center  text-center" >
+        <form action="{{ path('sign_in')}}" method="post" class="col-sm-8 col-md-6  control-label center-block mx-auto justify-content-center align-items-center  text-center" >
 
             <legend class="h1 my-5">Connectez-vous</legend>
 
@@ -16,8 +16,10 @@
             <div class="form-group">
                 <input placeholder="Mot de passe ..." required name="_password" type="password" class="form-control">
             </div>
-            <button type="submit" class="btn btn-dark btn-lg">Connexion  <i class="fas fa-sign-in-alt"></i></button>
+            <button type="submit" class="btn btn-dark">Connexion  <i class="fas fa-sign-in-alt"></i></button>
+            <p class="mt-2"><a href="{{ path('forgotten_password')}}">Mot de passe oublié ?</a></p>
         </form>
+        
     </div>
 </div>
 {% endblock %}
