add warning and danger flash

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -66,6 +66,24 @@
 			
 		</header>
 
+		{% for message in app.flashes('success') %}
+		<div class="alert alert-success my-5 mx-auto w-100 text-center fixed-top" style="max-width:350px;">
+			{{ message }}
+		</div
+		{% endfor %}
+
+		{% for message in app.flashes('warning') %}
+		<div class="alert alert-warning my-5 mx-auto w-100 text-center fixed-top" style="max-width:500px;">
+			{{ message }}
+		</div
+		{% endfor %}
+			
+		{% for message in app.flashes('danger') %}
+		<div class="alert alert-danger my-5 mx-auto w-100 text-center fixed-top" style="max-width:500px;">
+			{{ message }}
+		</div
+		{% endfor %}
+
 		<section>
 			{% block body %}{% endblock %}
 		</section>
