add function delete and resolve conflict, but had again comment in controller manually

--- a/templates/modal/delete_figure.html.twig
+++ b/templates/modal/delete_figure.html.twig
@@ -11,7 +11,7 @@
         <p>Êtes-vous sûr de vouloir supprimer la figure <strong>{{ figure.name }}</strong></p>
       </div>
       <div class="modal-footer">
-        <form action="" method="post"> 
+        <form action="{{ path('delete_figure', {'slug': figure.slug  }) }}" method="post"> 
           <input type="hidden" value="{{figure.id}}" required name="figure_id"/>
           <button type="submit" class="btn btn-danger" name="submit_delete_figure">Oui</button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
