--- a/templates/figure/add_figure.html.twig
+++ b/templates/figure/add_figure.html.twig
@@ -44,7 +44,7 @@
 {% endblock %}
 
 {% block javascripts %}
-	<script type="text/javascript" src="../build/app.js/ManagementCollectionForm.js"></script>
-	<script type="text/javascript" src="../build/app.js/addIllustrations.js"></script>
-	<script type="text/javascript" src="../build/app.js/addVideos.js"></script>
+	<script type="text/javascript" src="/js/managementCollectionForm.js"></script>
+	<script type="text/javascript" src="/js/addIllustrations.js"></script>
+	<script type="text/javascript" src="/js/addVideos.js"></script>
 {% endblock %}
