--- a/templates/figure/update_figure.html.twig
+++ b/templates/figure/update_figure.html.twig
@@ -11,7 +11,6 @@
 		{{ form_start(figure_form,{'attr':{'class':'col-offset-md-3 col-md-6  col-offset-md-3  control-label m-auto'}}) }}
 
 			<legend class="h1 my-5">{{figure.name}}</legend>
-
 			{{form_row(figure_form.description)}}
 			{{form_row(figure_form.figureGroupe)}}
 
@@ -52,7 +51,7 @@
 {% endblock %}
 
 {% block javascripts %}
-	<script type="text/javascript" src="../build/app.js/ManagementCollectionForm.js"></script>
-	<script type="text/javascript" src="../build/app.js/addIllustrations.js"></script>
-	<script type="text/javascript" src="../build/app.js/addVideos.js"></script>	
+	<script type="text/javascript" src="/js/managementCollectionForm.js"></script>
+	<script type="text/javascript" src="/js/addIllustrations.js"></script>
+	<script type="text/javascript" src="/js/addVideos.js"></script>	
 {% endblock %}
