--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<section id="conteneurPresentation" class="" style="height:95vh;">
+	<section id="conteneurPresentation" class="position-relative" style="height:100vh; bottom:60px;">
 		<img src="/images/welcome.jpg" class="position-absolute w-100" style="z-index:-1;top:0;height:100vh;" />
 		<div class="position-relative text-center h-100" >
 			<div class=" d-flex flex-column justify-content-center h-50" style="text-shadow: black 1px 0 1px;">
