--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
 			{% block title %}Snowtricks{% endblock %}
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="../css/base.css">
+		<link rel="stylesheet" href="/css/base.css">
 		<link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://kit.fontawesome.com/43219f80e6.js" crossorigin="anonymous"></script>
@@ -62,18 +62,18 @@
 			{% for message in app.flashes('success') %}
 			<div class="alert alert-success">
 				{{ message }}
-			</div
+			</div>
 			{% endfor %}
 			{% for message in app.flashes('warning') %}
 			<div class="alert alert-warning">
 				{{ message }}
-			</div
+			</div>
 			{% endfor %}
 				
 			{% for message in app.flashes('danger') %}
 			<div class="alert alert-danger">
 				{{ message }}
-			</div
+			</div>
 			{% endfor %}
 		</div>
 
