--- a/templates/figure/figure.html.twig
+++ b/templates/figure/figure.html.twig
@@ -27,10 +27,10 @@
 					<a href="{{ path('update_figure',{'slug':figure.slug}) }}">
 						<i class="fas fa-pencil-alt mx-2"></i>
 					</a>
-					<a href="" data-toggle="modal" data-target="#deleteFigure-{{figure.id}}">
+					<a data-toggle="modal" data-target="#deleteFigure-{{figure.id}}">
                         <i class="fas fa-trash-alt mx-2"></i>
                     </a>
-					{% include 'modal/delete_figure.html.twig' %}
+					{% include '/modal/delete_figure.html.twig' %}
 				</div>
 				{% endif %}
 
@@ -46,7 +46,7 @@
 			<hr class="col-sm-10">
 
 			<!-- Informations secondaire de l'article -->
-			<div class="col-sm-12 card-body text-center" style="">
+			<div class="col-sm-12 card-body text-center">
 
 				<p class="card-text blockquote-footer">Par : {{figure.user.username|capitalize}} | Crée le <em>{{figure.date|date("d/m/Y à H:i")}}</em> 
 				{% if figure.updateDate is not null %}
@@ -96,8 +96,8 @@
 		<div  id="commentaires" class="row justify-content-center border my-4 " style="border-radius:5px;">
 			<div class="col-sm-12 m-4">
 			{% if comments %}
-			 	<p class="mb-5" style="text-decoration:#555 underline;">{{commentsData|length}} COMMENTAIRE{% if commentsData|length > 1 %}S{% endif %}</p>
-				{% for comment in comments %}
+			 	<p class="mb-5" style="text-decoration:#555 underline;">{{comments|length}} COMMENTAIRE{% if comments|length > 1 %}S{% endif %}</p>
+				{% for comment in commentsPaginator %}
 				<div class="d-flex m-2">
 					<img src="../images/pictures/{{comment.user.picture}}" class="mx-4 mt-2 circle" style="height:50px; width:50px; border-radius:50px;"/>
 					<div class="m-1">
@@ -108,7 +108,7 @@
 				<hr>
 				{% endfor %}
 				<div class="d-flex justify-content-center">
-					{{ knp_pagination_render(comments) }}
+					{{ knp_pagination_render(commentsPaginator) }}
 				</div>
 				{% else %}
 				<div class="text-center card-text">
