--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -27,9 +27,9 @@
 					<a href="{{ path('figure',{'slug':figure.slug}) }}">
 						{% if figure.illustrations is empty %}
 							<!-- image par défaut-->
-							<img src="../images/figures/default_figure.png" alt="default figure" style="height:135px"/>
+							<img src="/images/figures/default_figure.png" alt="default figure" style="height:135px"/>
 						{% else %}
-							<img src="../images/figures/illustrations/{{figure.illustrations|first.path}}" alt="{{figure.illustrations|first.path}}" style="height:135px"/>
+							<img src="/images/figures/illustrations/{{figure.illustrations|first.path}}" alt="{{figure.illustrations|first.path}}" style="height:135px"/>
 						{% endif %}
 						<div class="card-footer d-flex justify-content-between">
 							<span class="h6">{{ figure.name }}</span>
@@ -38,10 +38,10 @@
 								<a href="{{ path('update_figure',{'slug':figure.slug}) }}">
 									<i class="fas fa-pencil-alt mx-2"></i>
 								</a>
-								<a href="" data-toggle="modal" data-target="#deleteFigure-{{figure.id}}">
+								<a data-toggle="modal" data-target="#deleteFigure-{{figure.id}}">
                                     <i class="fas fa-trash-alt mx-2"></i>
                                 </a>
-								{% include 'modal/delete_figure.html.twig' %}
+								{% include '/modal/delete_figure.html.twig' %}
 							</div>
 							{% endif %}
 						</div>
