--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -87,11 +87,10 @@
 			</div>
 		</footer>
 
-		{% block javascripts %}
-			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-            crossorigin="anonymous"></script>			
-		{% endblock %}
+            crossorigin="anonymous"></script>	
+		{% block javascripts %}{% endblock %}
 
 	</body>
 </html>
