use group entity as basic fields for form. update form, entity and template for connect relation figure form with group entity

--- a/templates/figure/update_figure.html.twig
+++ b/templates/figure/update_figure.html.twig
@@ -13,7 +13,7 @@
 			<legend class="h1 my-5">{{figure.name}}</legend>
 
 			{{form_row(figure_form.description)}}
-			{{form_row(figure_form.figureGroupe)}}
+			{{form_row(figure_form.groupType)}}
 
 			<div id="containerIllustrations">
 				<ul id="ulIllustrations" class="illustrations d-flex justify-content-around flex-wrap text-center" data-prototype="{{ form_widget(figure_form.illustrations.vars.prototype)|e('html_attr') }}">
