--- a/templates/figure/figure.html.twig
+++ b/templates/figure/figure.html.twig
@@ -52,8 +52,7 @@
 				{% if figure.updateDate is not null %}
 				| Modifié le <em>{{figure.updateDate|date("d/m/Y à H:i")}}</em> 
 				{% endif %}
-				
-				| Groupe : {{figure.figureGroupe}} | commentaire{% if comments|length > 1 %}s{% endif %} : <a href="#commentaires">({{comments|length}})</a></p>
+				| Groupe : {{figure.groupType.name}} | commentaire{% if comments|length > 1 %}s{% endif %} : <a href="#commentaires">({{comments|length}})</a></p>
 			</div>
 
 			<hr class="col-sm-10">
