--- a/templates/figure/figure.html.twig
+++ b/templates/figure/figure.html.twig
@@ -87,7 +87,7 @@
 		</div>
 		{% else %}
 		<div class="row justify-content-center border my-4 " style="border-radius:5px;">
-			<span class="h5 py-2"><a href="{{ path('sign_up') }}">Inscrivez-vous</a> ou <a href="{{ path('sign_in') }}">connectez</a> vous pour commenter cet article<span/>
+			<span class="h5 py-2"><a href="{{ path('register') }}">Inscrivez-vous</a> ou <a href="{{ path('sign_in') }}">connectez</a> vous pour commenter cet article<span/>
 		</div>
 		{% endif %}
 
