--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -15,7 +15,7 @@
                 {{ form_row(formSignUp.username,{'label': 'Nom d\'utilisateur ','attr':{'placeholder': 'Nom d\'utilisateur...'}}) }}
                 {{ form_row(formSignUp.email,{'label': 'Adresse email ','attr':{'placeholder': 'Adresse email'}}) }}
                 {{ form_row(formSignUp.password,{'label':'Mot de passe ', 'attr': {'placeholder':'Mot de passe !'}}) }}
-                {{ form_row(formSignUp.picture) }}
+                {{ form_row(formSignUp.picture,{'attr':{'class':"form-control-file"}}) }}
                 <button type="submit" class="btn btn-dark"><i class="fas fa-user-plus"></i> Je m'inscris !</button>
             {{ form_end(formSignUp) }}
         </div>
