--- a/templates/figure/figure.html.twig
+++ b/templates/figure/figure.html.twig
@@ -24,10 +24,10 @@
 
 				{% if app.user %}
 				<div class="position-absolute z-index-2" style="top:0;right:10px;">
-					<a href="{{ path('update_figure',{'slug':figure.slug}) }}">
+					<a href="{{ path('update_figure',{'slug':figure.slug}) }}" class="text-secondary">
 						<i class="fas fa-pencil-alt mx-2"></i>
 					</a>
-					<a data-toggle="modal" data-target="#deleteFigure-{{figure.id}}">
+					<a data-toggle="modal" data-target="#deleteFigure-{{figure.id}}" class="text-secondary">
                         <i class="fas fa-trash-alt mx-2"></i>
                     </a>
 					{% include '/modal/delete_figure.html.twig' %}
