--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -12,7 +12,7 @@
 				<p class="h5">Découvrez le <strong>Snowboard</strong> et apprenez les différentes figures avec Jimmy Sweat et la communauté.</p>
 			</div>
 			<div class=" d-flex flex-column justify-content-end" style="height:40%;" >
-				<a href="#conteneurTricks" style="color:silver;" >
+				<a href="#conteneurTricks" class="text-light" style="text-shadow: 2px 2px black;" >
 					<p><strong>SCROLL</strong></p>
 					<i class="fas fa-angle-down h1"></i>
 				</a>
@@ -23,7 +23,7 @@
 	<section id="conteneurTricks" style="position:relative; padding-top:60px; top:-60px;">
 		<div class="m-auto d-flex flex-wrap justify-content-around" style="max-width:1250px;">
 			{% for figure in figures %}
-				<article class="figure card bg-dark border-dark my-3 mx-2" style="max-width: 300px; display:none;">
+				<article class="figure card bg-dark my-3 mx-2" style="max-width: 300px; display:none;">
 					<a class="text-light" href="{{ path('show_figure',{'slug':figure.slug}) }}">
 						{% if figure.illustrations is empty %}
 							<!-- image par défaut-->
@@ -38,7 +38,7 @@
 								<a class="text-light" href="{{ path('update_figure',{'slug':figure.slug}) }}">
 									<i class="fas fa-pencil-alt mx-2"></i>
 								</a>
-								<a class="text-muted" data-toggle="modal" data-target="#deleteFigure-{{figure.id}}">
+								<a class="text-light" data-toggle="modal" data-target="#deleteFigure-{{figure.id}}">
                                     <i class="fas fa-trash-alt mx-2"></i>
                                 </a>
 								{% include '/modal/delete_figure.html.twig' %}
@@ -55,8 +55,8 @@
 			<i id="loadLessFigure" class="fas fa-minus-circle m-3" style="display:none; cursor:pointer; font-size:120%"> Moins de figure</i>
 		</div>
 		
-		<a id="arrowUp" href="#conteneurTricks" style="display:none;">
-			<i class="fas fa-angle-up"></i>
+		<a id="arrowUp" href="#conteneurTricks" style="display:none; position:absolute; right:5px;">
+			<i class="fas fa-angle-up h1 text-dark" style="text-shadow: 2px 2px grey;"></i>
 		</a>
 	</section>
 
